<resources>
    <string name="app_name">Working Title</string>
    <string name="app_desc">Chat and Weather</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="firstName">FirstName</string>
    <string name="lastName">LastName</string>

    <string name="login_button">Login</string>
    <string name="login_checkBox">Stay Logged In</string>
    <string name="reg_button">Register</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Users Nickname</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_connections">Connections</string>

    <string name="keys_shared_prefs">edu.uw.tcss450.group4.PREFS</string>
    <string name="keys_prefs_email">traffic_light_wont_let_me_through</string>
    <string name="keys_prefs_password">see_the_city_see_the_zoo</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passwordMatch">* Not Match</string>
    <string name="send_message_to_contact">Send Message</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="BlockUser">Block User</string>
    <string name="RemoveRequest">Remove Request</string>
    <string name="ReSendFriendRequest">Re-Send Request</string>
    <string name="SendFriendRequest">Friend Request</string>
    <string name="email_nickname">Enter your friends email/nickname</string>

</resources>
